--- a/jsonprojectgame.json
+++ b/jsonprojectgame.json
@@ -1,1 +1,1 @@
-{"kibitzesClearway":"0","crockeryStammers":"https://www.baidu.com"}
+{"kibitzesClearway":0,"crockeryStammers":"https://www.baidu.com"}
